src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Trial_Run_Outcome__c</fullName>
        <label>Trial Run Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_Run_Start_Date__c</fullName>
        <label>Trial Run Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Test_Outcome__c</fullName>
        <label>Valspar Pack Test Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Pack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USD_Next_FY_Probabilty_Based_Revenue__c</fullName>
        <description>If next fy override null else if close date is not current fy then annual</description>
        <formula>if (Next_FY_Revenue_Override__c &lt;&gt; 0&amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
        Next_FY_Revenue_Override__c,
        if (Closed_In_Current_FY__c = 1&amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
                      Annual_Probability_Based_Revenue__c -  Current_FY_Revenue__c ,
                      if (Closed_In_Next_FY__c = 1&amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
                           Close_Year_Revenue__c,
                           0
                      )
          )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Opportunity Close Date is in current fiscal year, then
(Annual Expected Revenue – Current FY Revenue) * Probability. Else if
Close Date is in next fiscal year, then Annual Expected Revenue * (Next FY
End Date – Close Date) / 365 * Probability.</inlineHelpText>
        <label>Next FY Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>GAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VOC_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Volatile Organic Compound</description>
        <label>VOC Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Validated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valspar_Pack_Test_End_Date__c</fullName>
        <label>Valspar Pack Test End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valspar_Pack_Test_Start_Date__c</fullName>
        <label>Valspar Pack Test Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valspar_Product_Number__c</fullName>
        <label>Valspar Product Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Proposition_Completed_Date__c</fullName>
        <label>Value Proposition Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Proposition_Gate__c</fullName>
        <description>Indicate whether or not you&apos;ve demonstrated the business value to the customer.</description>
        <inlineHelpText>Indicate whether or not you&apos;ve demonstrated the business value to the customer by clicking yes or no.</inlineHelpText>
        <label>Value Proposition Gate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Selling_Proposal_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Selling Proposal Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Business_Owner__c</columns>
        <columns>Annual_Expected_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>CFY_Closed_Lost_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/29/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/26/2012</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed/Lost</value>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>CFY Closed Lost Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Annual_Expected_Revenue__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Coil_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Business_Owner__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Coil/Extrusion</value>
        </filters>
        <label>Coil Opportunities</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_DB_Opportunties</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer DB</value>
        </filters>
        <label>Consumer DB Opportunties</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Current_FY_Opportunties</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/29/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/26/2012</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed/Won</value>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Current FY Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Current_FY_Revenue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Current_FY_Revenue__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/29/2012</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/29/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed/Lost</value>
        </filters>
        <label>Current FY Revenue</label>
    </listViews>
    <listViews>
        <fullName>Current_FY_Revenue_By_Account_Name</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/28/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/26/2012</value>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed/Lost</value>
        </filters>
        <label>Current FY Revenue By Account Name</label>
    </listViews>
    <listViews>
        <fullName>Current_FY_Revenue_By_Business_Owner</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Business_Owner__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>10/29/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>10/26/2012</value>
        </filters>
        <filters>
            <field>Business_Owner__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Current FY Revenue By Business Owner</label>
    </listViews>
    <listViews>
        <fullName>Current_FY_Revenue_By_Opportunity_Owner</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Current_FY_Revenue__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/29/2011</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/26/2012</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed/Lost</value>
        </filters>
        <label>Current FY Revenue By Opportunity Owner</label>
    </listViews>
    <listViews>
        <fullName>Current_FY_Revenue_by_Market_Segment</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Current_FY_Revenue__c</columns>
        <columns>Market_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/29/2012</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/26/2013</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Coil,Coil/Extrusion</value>
        </filters>
        <filters>
            <field>Current_FY_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Current FY Revenue by Market Segment</label>
    </listViews>
    <listViews>
        <fullName>GI_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Annual_Expected_Revenue__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <label>GI Opportunities</label>
        <sharedTo>
            <role>GIBUAdmin</role>
            <role>GI_Wood_Executives_Managers</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GI_Opportunities_by_bus_opp_owner</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Top_Opportunity__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Simpson</value>
        </filters>
        <label>GI Opportunities - by sales rep</label>
        <language>en_US</language>
        <sharedTo>
            <role>GIBUAdmin</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GI_Opportunities_top_opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>LWR_Number__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Annual_Expected_Revenue__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Current_FY_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>Top_Opportunity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GI Opportunities - Top Opps</label>
        <sharedTo>
            <role>GIBUAdmin</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <businessProcess>Consumer</businessProcess>
        <description>Consumer opportunity record type</description>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Valspar_Master_Opportunity_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Valspar Master Sales Process</businessProcess>
        <description>Master opportunity record type for Valspar.</description>
        <label>Valspar Master Opportunity Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Naming_convention_must_contain_a_hyphen</fullName>
        <active>false</active>
        <description>The opportunity naming convention must have a hyphen to enforce a common naming convention with Account Name hypen and then unique identifier</description>
        <errorConditionFormula>FIND( &quot; - &quot;, Name ) = 0</errorConditionFormula>
        <errorMessage>Opportunity Name should use Account Name + the solution name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Develop_Stage</fullName>
        <active>true</active>
        <description>The approved by field must be populated before the user can move the opportunity to the Develop sales stage.</description>
        <errorConditionFormula>AND (
ISPICKVAL(StageName, &quot;Develop&quot;),
ISBLANK(Approved_By__c),
(ISPICKVAL( Business_Unit__c , &quot;Packaging&quot;) || ISPICKVAL( Business_Unit__c , &quot;General Industrial&quot;) || ISPICKVAL( Business_Unit__c , &quot;Wood&quot;))
)</errorConditionFormula>
        <errorMessage>The Develop sales stage requires the Approved By field to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Won_Lost_Required</fullName>
        <active>true</active>
        <description>The Reason Won/Lost field is required if the Stage = Closed Won or Closed Lost</description>
        <errorConditionFormula>AND( ISPICKVAL(StageName, &quot;Closed/Won&quot;), 
OR (ISPICKVAL(StageName, &quot;Closed/Lost&quot;),
ISPICKVAL(Reason_Won_Lost__c, &quot;True&quot;)
))</errorConditionFormula>
        <errorMessage>The Reason Won Lost Field is Required when Stage = Closed/Won or Closed/Lost</errorMessage>
    </validationRules>
</CustomObject>